fix align images responsive

--- a/wp-content/themes/savannahtrek/assets/stylus/main.styl
+++ b/wp-content/themes/savannahtrek/assets/stylus/main.styl
@@ -99,16 +99,24 @@ textarea
 .verde
 	background-color #9BB227
 .alignright
-	margin-left 0
+	display block
+	margin-left auto
+	margin-right auto 
+	margin-bottom 1rem
 .alignleft
-	margin-right 0
-@media screen and (min-width:980px)
+	display block
+	margin-left auto
+	margin-right auto 
+	margin-bottom 1rem
+@media screen and (min-width:700px)
 	.alignright
 		float right
 		margin-left 1rem
+		margin-bottom 0
 	.alignleft
 		float left
-		margin-right 1rem 
+		margin-right 1rem
+		margin-bottom 0 
 	
 .iframe
 	width 100%
