--- a/wp-content/themes/savannahtrek/style.css
+++ b/wp-content/themes/savannahtrek/style.css
@@ -667,19 +667,27 @@ textarea {
   background-color: #9bb227;
 }
 .alignright {
-  margin-left: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
 }
 .alignleft {
-  margin-right: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
 }
-@media screen and (min-width: 980px) {
+@media screen and (min-width: 700px) {
   .alignright {
     float: right;
     margin-left: 1rem;
+    margin-bottom: 0;
   }
   .alignleft {
     float: left;
     margin-right: 1rem;
+    margin-bottom: 0;
   }
 }
 .iframe {
